last version before cicd

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,9 @@
 version: "3.5"
 
+volumes:
+  postgres:
+  pgadmin:
+
 services:
   redis:
     image: redis:latest
@@ -75,3 +79,34 @@ services:
       JVM_OPTS: "-Xms16M -Xmx48M -Xss180K -XX:-TieredCompilation -XX:+UseStringDeduplication -noverify"
     depends_on:
       - "kafka"
+  postgres:
+    container_name: bookstore_postgres
+    image: 'postgres:latest'
+    environment:
+      POSTGRES_DB: bookstore
+      POSTGRES_PASSWORD: password
+      POSTGRES_USER: burak
+    volumes:
+      - postgres:/data/postgres
+    ports:
+      - '5432'
+    restart: unless-stopped
+
+  pgadmin:
+    container_name: bookstore_pgadmin
+    image: dpage/pgadmin4:latest
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@localhost.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+      PGADMIN_LISTEN_PORT: 5050
+      PGADMIN_CONFIG_SERVER_MODE: "False"
+      PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED: "False"
+    volumes:
+      - pgadmin:/var/lib/pgadmin
+      - ./docker_pgadmin_servers.json:/pgadmin4/servers.json
+    ports:
+      - '5050:5050'
+    entrypoint:
+      - "/bin/sh"
+      - "-c"
+      - "/bin/echo 'postgres:5432:*:burak:password' > /tmp/pgpassfile && chmod 600 /tmp/pgpassfile && /entrypoint.sh"
