--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,11 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 </dependencies>
 
 	<build>
