--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,21 +3,26 @@ application-description: Bookstore
 
 spring:
   jpa:
+    generate-ddl: 'true'
     properties:
       hibernate:
         globally_quoted_identifiers: 'true'
-    database-platform: org.hibernate.dialect.H2Dialect
+#    database-platform: org.hibernate.dialect.H2Dialect
     defer-datasource-initialization: 'true'
     hibernate:
-      ddl-auto: update
-  datasource:
-    username: sa
-    url: jdbc:h2:mem:bookstore_db
-    driverClassName: org.h2.Driver
-    password: password
-  h2:
-    console:
-      enabled: 'true'
+      ddl-auto: create-drop
+      show-sql: 'true'
+  docker:
+    compose:
+      lifecycle-management: start_and_stop
+#  datasource:
+#    username: sa
+#    url: jdbc:h2:mem:bookstore_db
+#    driverClassName: org.h2.Driver
+#    password: password
+#  h2:
+#    console:
+#      enabled: 'true'
   cache:
     type: redis
     host: localhost
